Distinction between armhf (RaspberryPi) and armv5tel (old ARM devices) VFS modules - hopefully will get us a working .deb for Raspberry Pi soon

--- a/DEBIAN/Makefile
+++ b/DEBIAN/Makefile
@@ -66,10 +66,19 @@ ifeq ($(ARCH), amd64)
 		install -m 0644 -D -p samba-module/bin/4.0/greyhole-x86_64.so $(DESTDIR)usr/lib64/greyhole/greyhole-samba40.so
 		install -m 0644 -D -p samba-module/bin/4.1/greyhole-x86_64.so $(DESTDIR)usr/lib64/greyhole/greyhole-samba41.so
 else
-		mkdir -p $(DESTDIR)usr/lib/greyhole/
-		install -m 0644 -D -p samba-module/bin/3.4/greyhole-i386.so $(DESTDIR)usr/lib/greyhole/greyhole-samba34.so
-		install -m 0644 -D -p samba-module/bin/3.5/greyhole-i386.so $(DESTDIR)usr/lib/greyhole/greyhole-samba35.so
-		install -m 0644 -D -p samba-module/bin/3.6/greyhole-i386.so $(DESTDIR)usr/lib/greyhole/greyhole-samba36.so
-		install -m 0644 -D -p samba-module/bin/4.0/greyhole-i386.so $(DESTDIR)usr/lib/greyhole/greyhole-samba40.so
-		install -m 0644 -D -p samba-module/bin/4.1/greyhole-i386.so $(DESTDIR)usr/lib/greyhole/greyhole-samba41.so
+    ifeq ($(ARCH), armhf)
+            mkdir -p $(DESTDIR)usr/lib/greyhole/
+            install -m 0644 -D -p samba-module/bin/3.4/greyhole-armhf.so $(DESTDIR)usr/lib/greyhole/greyhole-samba34.so
+            install -m 0644 -D -p samba-module/bin/3.5/greyhole-armhf.so $(DESTDIR)usr/lib/greyhole/greyhole-samba35.so
+            install -m 0644 -D -p samba-module/bin/3.6/greyhole-armhf.so $(DESTDIR)usr/lib/greyhole/greyhole-samba36.so
+            install -m 0644 -D -p samba-module/bin/4.0/greyhole-armhf.so $(DESTDIR)usr/lib/greyhole/greyhole-samba40.so
+            install -m 0644 -D -p samba-module/bin/4.1/greyhole-armhf.so $(DESTDIR)usr/lib/greyhole/greyhole-samba41.so
+    else
+            mkdir -p $(DESTDIR)usr/lib/greyhole/
+            install -m 0644 -D -p samba-module/bin/3.4/greyhole-i386.so $(DESTDIR)usr/lib/greyhole/greyhole-samba34.so
+            install -m 0644 -D -p samba-module/bin/3.5/greyhole-i386.so $(DESTDIR)usr/lib/greyhole/greyhole-samba35.so
+            install -m 0644 -D -p samba-module/bin/3.6/greyhole-i386.so $(DESTDIR)usr/lib/greyhole/greyhole-samba36.so
+            install -m 0644 -D -p samba-module/bin/4.0/greyhole-i386.so $(DESTDIR)usr/lib/greyhole/greyhole-samba40.so
+            install -m 0644 -D -p samba-module/bin/4.1/greyhole-i386.so $(DESTDIR)usr/lib/greyhole/greyhole-samba41.so
+    endif
 endif
