Modified sample greyhole.conf, because having comments at the end of a line is not supported by the parser.

--- a/greyhole.example.conf
+++ b/greyhole.example.conf
@@ -72,7 +72,8 @@
 #	num_copies[CrashPlan] = 2
 #	num_copies[Games] = 2
 #	num_copies[Music] = 2
-#	num_copies[Photos] = max # This will insure those files are on all HDD
+#   # This will insure those files are on all HDD:
+#	num_copies[Photos] = max
 #	num_copies[RecordedTV] = 1
 #	num_copies[Software] = 2
 #	num_copies[TimeMachine] = 1
