Split functionality of setting delete_moves_to_trash
Before it would handle two scenarios:
1) When a file is deleted
2) When a file has been modified

Scenario 2 now has it's own configuration called modified_moves_to_trash

DEBIAN/Makefile was trying to remove a file called greyhole-mv which does not exist causing the script to fail, have commented out until gboudreau adds that script into the repo.

--- a/DEBIAN/Makefile
+++ b/DEBIAN/Makefile
@@ -6,7 +6,7 @@ deb: build
 	rm greyhole
 	rm greyhole-dfree
 	rm greyhole-dfree.php
-	rm greyhole-mv
+#	rm greyhole-mv
 	rm logrotate.greyhole
 	rm schema-mysql.sql
 	rm schema-sqlite.sql
