--- a/greyhole.example.conf
+++ b/greyhole.example.conf
@@ -1,4 +1,3 @@
-
 # This file is part of Greyhole.
 
 #### Database Connection ####
@@ -184,15 +183,27 @@
 
 	df_cache_time = 15
 
-#### Trash ####
+#### Delete to Trash ####
 # Move deleted files to trash, instead of deleting them?
-# (Yes, trash is just another name for a Recycle Bin.)
+# ( Yes, trash is just another name for a Recycle Bin. )
+# This is useful in scenarios where you accidently deleted a file.
 # You can specify per-share preferences that will override the global 
 # preference.
 
 	delete_moves_to_trash = yes
 #	delete_moves_to_trash[CrashPlan] = no
 #	delete_moves_to_trash[TimeMachine] = no
+
+#### Modified to Trash
+# Move modified files to trash, instead of deleting them?
+# This is useful in scenarios when you accidently saved a file
+# and want to revert back.
+# You can specify per-share preferences that will override the global
+# preference
+	
+	modified_moves_to_trash = yes
+#	modified_moves_to_trash[CrashPlan] = no
+#	modified_moves_to_trash[TimeMachine] = no
 
 #### Frozen directories ####
 # Directories listed below will not be touched by Greyhole until the user 
