Bugfix: say something when the service is started but will die instantly. Fixes #43

--- a/upstart.conf
+++ b/upstart.conf
@@ -4,12 +4,17 @@ author      "Guillaume Boudreau"
 start on started mysql and started smbd
 stop on shutdown
 
+pre-start script
+	/usr/bin/greyhole --test-config 2> /tmp/gh-start-error
+	exit $?
+end script
+
 script
-    n=`grep daemon_niceness /etc/greyhole.conf | grep -v '#.*daemon_niceness' | sed 's/^.*= *\(.*\) *$/\1/'`
+	n=`grep daemon_niceness /etc/greyhole.conf | grep -v '#.*daemon_niceness' | sed 's/^.*= *\(.*\) *$/\1/'`
 	if [ "$n" = "" ]; then
 		n=1
 	fi
-	nice -n $n /usr/bin/greyhole --daemon
+    nice -n $n /usr/bin/greyhole --daemon
 end script
 
 post-start script
