Support for Samba 4.2

--- a/DEBIAN/Makefile
+++ b/DEBIAN/Makefile
@@ -69,6 +69,7 @@ ifeq ($(ARCH), amd64)
 	install -m 0644 -D -p samba-module/bin/3.6/greyhole-x86_64.so $(DESTDIR)usr/lib64/greyhole/greyhole-samba36.so
 	install -m 0644 -D -p samba-module/bin/4.0/greyhole-x86_64.so $(DESTDIR)usr/lib64/greyhole/greyhole-samba40.so
 	install -m 0644 -D -p samba-module/bin/4.1/greyhole-x86_64.so $(DESTDIR)usr/lib64/greyhole/greyhole-samba41.so
+	install -m 0644 -D -p samba-module/bin/4.2/greyhole-x86_64.so $(DESTDIR)usr/lib64/greyhole/greyhole-samba42.so
 else
 ifeq ($(ARCH), armhf)
 		mkdir -p $(DESTDIR)usr/lib/greyhole/
@@ -77,6 +78,7 @@ ifeq ($(ARCH), armhf)
 		install -m 0644 -D -p samba-module/bin/3.6/greyhole-armhf.so $(DESTDIR)usr/lib/greyhole/greyhole-samba36.so
 		install -m 0644 -D -p samba-module/bin/4.0/greyhole-armhf.so $(DESTDIR)usr/lib/greyhole/greyhole-samba40.so
 		install -m 0644 -D -p samba-module/bin/4.1/greyhole-armhf.so $(DESTDIR)usr/lib/greyhole/greyhole-samba41.so
+		install -m 0644 -D -p samba-module/bin/4.2/greyhole-armhf.so $(DESTDIR)usr/lib/greyhole/greyhole-samba42.so
 else
 		mkdir -p $(DESTDIR)usr/lib/greyhole/
 		install -m 0644 -D -p samba-module/bin/3.4/greyhole-i386.so $(DESTDIR)usr/lib/greyhole/greyhole-samba34.so
@@ -84,5 +86,6 @@ else
 		install -m 0644 -D -p samba-module/bin/3.6/greyhole-i386.so $(DESTDIR)usr/lib/greyhole/greyhole-samba36.so
 		install -m 0644 -D -p samba-module/bin/4.0/greyhole-i386.so $(DESTDIR)usr/lib/greyhole/greyhole-samba40.so
 		install -m 0644 -D -p samba-module/bin/4.1/greyhole-i386.so $(DESTDIR)usr/lib/greyhole/greyhole-samba41.so
+		install -m 0644 -D -p samba-module/bin/4.2/greyhole-i386.so $(DESTDIR)usr/lib/greyhole/greyhole-samba42.so
 endif
 endif
