Fix for Ubuntu 15 now using systemd instead of Upstart, and samba init.d script being deprecated (now using smbd) in latest Debian and Ubuntu (15)

--- a/DEBIAN/control
+++ b/DEBIAN/control
@@ -1,7 +1,7 @@
 Section: net
 Priority: extra
 Maintainer: Guillaume Boudreau <guillaume@greyhole.net>
-Homepage: http://www.greyhole.net
+Homepage: https://www.greyhole.net
 Package: greyhole
 Version: 0.9.3-1
 Architecture: i386
