Add a trailing / to ignored_folders matching

--- a/greyhole.example.conf
+++ b/greyhole.example.conf
@@ -254,7 +254,7 @@
 #
 # ignored_files is matched against the file name only.
 # ignored_folders is matched against the concatenation of the share name and
-#   the full path to the file (without the filename), eg: Videos/Movies/HD
+#   the full path to the file (without the filename), eg: Videos/Movies/HD/
 
     # rsync temporary files
     ignored_files = \..*\.[0-9a-zA-Z]{6}
