Example .conf: ignoring more things by default

--- a/greyhole.example.conf
+++ b/greyhole.example.conf
@@ -264,5 +264,11 @@
     ignored_files = \.cprestoretmp.*
     # SABnzbd temporary folders when extracting a download
     ignored_folders = .*/_UNPACK_.*
+    # NZBget temporary folders when extracting a download
+    ignored_folders = .*/_unpack.*
+    # Plex Optimized Versions temporary files
+    ignored_folders = .*/inProgress/.*
+    # Mac metadata files
+    ignored_files = \.DS_Store
     # Windows thumbs database files
     #ignored_files = Thumb.db
