custom copy routine

--- a/greyhole.example.conf
+++ b/greyhole.example.conf
@@ -230,11 +230,26 @@
 #	memory_limit = 512M
 
 #### Copy Method ####
-# Possible values: cp, rsync
-# cp is less CPU-intensive, and generally faster than rsync, which is still 
+# Possible values: 
+#    cp
+#    rsync
+#    custom : {COMMAND TO RUN}
+# "cp" is less CPU-intensive, and generally faster than rsync, which is still 
 # available for backward compatibility
+# "custom" is used to specify a custom copy routine; greyhole will append
+# source and destination full file names to the command after ":". The custom
+# script is # responsible for copying the  source file to its destination 
+# while preserving the timestamp. Below is an example of using "custom"
+#
+#   copy_method = custom : /root/copy_file.sh
+#
+#   cat /root/copy_file.sh
+#   #!/bin/bash
+#   cp -p "$1" "$2"
 
+#	copy_method = rsync
 #	copy_method = cp
+#	copy_method = custom : cp -p
 
 #### Executed tasks retention ####
 # How long should executed tasks be kept in the database, after having been executed.
