Added documentation about custom copy_method to man page; added example greyhole-custom-cp.sh script in /usr/share/greyhole/

--- a/DEBIAN/Makefile
+++ b/DEBIAN/Makefile
@@ -6,6 +6,7 @@ deb: build
 	rm greyhole
 	rm greyhole-dfree
 	rm greyhole-dfree.php
+	rm greyhole-custom-cp.sh
 	rm -f greyhole-mv
 	rm logrotate.greyhole
 	rm schema-mysql.sql
@@ -39,6 +40,7 @@ build:
 	install -m 0755 -D -p greyhole $(DESTDIR)usr/bin
 	install -m 0755 -D -p greyhole-dfree $(DESTDIR)usr/bin
 	install -m 0755 -D -p greyhole-dfree.php $(DESTDIR)usr/share/greyhole/
+	install -m 0755 -D -p greyhole-custom-cp.sh $(DESTDIR)usr/share/greyhole/
 
 	install -m 0644 -D -p schema-mysql.sql $(DESTDIR)usr/share/greyhole/
 	install -m 0644 -D -p schema-sqlite.sql $(DESTDIR)usr/share/greyhole/
