--- a/greyhole.example.conf
+++ b/greyhole.example.conf
@@ -230,26 +230,19 @@
 #	memory_limit = 512M
 
 #### Copy Method ####
-# Possible values: 
-#    cp
-#    rsync
-#    custom : {COMMAND TO RUN}
-# "cp" is less CPU-intensive, and generally faster than rsync, which is still 
-# available for backward compatibility
-# "custom" is used to specify a custom copy routine; greyhole will append
-# source and destination full file names to the command after ":". The custom
-# script is # responsible for copying the  source file to its destination 
-# while preserving the timestamp. Below is an example of using "custom"
+# Possible values: cp, rsync, custom: [command]
+# "cp" is less CPU-intensive, and generally faster than "rsync", which is still
+# available for backward compatibility.
+# "custom" is used to specify a custom command. Greyhole will send as
+# arguments the source and destination filenames to the command after colon.
+# The custom command is responsible for copying the source file to the specified
+# destination while preserving the timestamp.
+# See greyhole-custom-cp.sh for an example.
+# Default is "cp".
 #
-#   copy_method = custom : /root/copy_file.sh
-#
-#   cat /root/copy_file.sh
-#   #!/bin/bash
-#   cp -p "$1" "$2"
-
 #	copy_method = rsync
 #	copy_method = cp
-#	copy_method = custom : cp -p
+#	copy_method = custom: /usr/share/greyhole/greyhole-custom-cp.sh
 
 #### Executed tasks retention ####
 # How long should executed tasks be kept in the database, after having been executed.
