More changes to support Samba 4.5; including compiled VFS modules

--- a/DEBIAN/Makefile
+++ b/DEBIAN/Makefile
@@ -74,6 +74,7 @@ ifeq ($(ARCH), amd64)
 	install -m 0644 -D -p samba-module/bin/4.2/greyhole-x86_64.so $(DESTDIR)usr/lib64/greyhole/greyhole-samba42.so
 	install -m 0644 -D -p samba-module/bin/4.3/greyhole-x86_64.so $(DESTDIR)usr/lib64/greyhole/greyhole-samba43.so
 	install -m 0644 -D -p samba-module/bin/4.4/greyhole-x86_64.so $(DESTDIR)usr/lib64/greyhole/greyhole-samba44.so
+	install -m 0644 -D -p samba-module/bin/4.5/greyhole-x86_64.so $(DESTDIR)usr/lib64/greyhole/greyhole-samba45.so
 else
 ifeq ($(ARCH), armhf)
 		mkdir -p $(DESTDIR)usr/lib/greyhole/
@@ -85,6 +86,7 @@ ifeq ($(ARCH), armhf)
 		install -m 0644 -D -p samba-module/bin/4.2/greyhole-armhf.so $(DESTDIR)usr/lib/greyhole/greyhole-samba42.so
 		install -m 0644 -D -p samba-module/bin/4.3/greyhole-armhf.so $(DESTDIR)usr/lib/greyhole/greyhole-samba43.so
 		install -m 0644 -D -p samba-module/bin/4.4/greyhole-armhf.so $(DESTDIR)usr/lib/greyhole/greyhole-samba44.so
+		install -m 0644 -D -p samba-module/bin/4.5/greyhole-armhf.so $(DESTDIR)usr/lib/greyhole/greyhole-samba45.so
 else
 		mkdir -p $(DESTDIR)usr/lib/greyhole/
 		install -m 0644 -D -p samba-module/bin/3.4/greyhole-i386.so $(DESTDIR)usr/lib/greyhole/greyhole-samba34.so
@@ -95,5 +97,6 @@ else
 		install -m 0644 -D -p samba-module/bin/4.2/greyhole-i386.so $(DESTDIR)usr/lib/greyhole/greyhole-samba42.so
 		install -m 0644 -D -p samba-module/bin/4.3/greyhole-i386.so $(DESTDIR)usr/lib/greyhole/greyhole-samba43.so
 		install -m 0644 -D -p samba-module/bin/4.4/greyhole-i386.so $(DESTDIR)usr/lib/greyhole/greyhole-samba44.so
+		install -m 0644 -D -p samba-module/bin/4.5/greyhole-i386.so $(DESTDIR)usr/lib/greyhole/greyhole-samba45.so
 endif
 endif
