Adding Hooks (external script) config option

--- a/greyhole.example.conf
+++ b/greyhole.example.conf
@@ -281,3 +281,25 @@
     ignored_files = \.DS_Store
     # Windows thumbs database files
     #ignored_files = Thumb.db
+
+#### Hooks ####
+# Call custom scripts on events.
+#
+# Available events type: create, edit, rename, delete, mkdir, rmdir, warning, error, critical, fsck, idle, not_idle
+# - For create, edit, rename, delete, mkdir, and rmdir, the hooks are called after Greyhole finished processing the operation;
+# - for warning, error, critical and fsck, the hooks are called after Greyhole created a log;
+# - for idle and not_idle, the hooks are called just before the daemon will sleep.
+#
+# The parameters sent to the custom scripts are:
+#   - event_type (one of the above)
+# If event is related to a file/folder on a share, other params will be:
+#   - share_name
+#   - path_on_share
+# If event is related to a log (warning, error, critical and fsck), other params will be:
+#   - event_code: one of the predefined values that define the actual error/event; see ... for the list of possible codes
+#   - log: user-readable log (might contain LF characters)
+#
+#	hook[create|edit|rename|delete|mkdir|rmdir] = /home/me/bin/greyhole_file_changed.sh
+#	hook[warning|error|critical] = /home/me/bin/greyhole_notify_error.sh
+#	hook[fsck] = /home/me/bin/greyhole_send_fsck_report.sh
+#	hook[idle|not_idle] = /home/me/bin/greyhole_idle.sh
