Complete implementation of FileHooks (missing doc)

--- a/greyhole.example.conf
+++ b/greyhole.example.conf
@@ -295,6 +295,7 @@
 # If event is related to a file/folder on a share, other params will be:
 #   - share_name
 #   - path_on_share
+#   - original_path_on_share (only if event_type = rename)
 # If event is related to a log (warning, error, critical and fsck), other params will be:
 #   - event_code: one of the predefined values that define the actual error/event; see ... for the list of possible codes
 #   - log: user-readable log (might contain LF characters)
