--- a/greyhole.example.conf
+++ b/greyhole.example.conf
@@ -297,7 +297,7 @@
 #   - path_on_share
 #   - original_path_on_share (only if event_type = rename)
 # If event is related to a log (warning, error, critical and fsck), other params will be:
-#   - event_code: one of the predefined values that define the actual error/event; see ... for the list of possible codes
+#   - event_code: one of the predefined values that define the actual error/event; look here for the list of possible codes: https://github.com/gboudreau/Greyhole/blob/master/includes/Log.php#L62
 #   - log: user-readable log (might contain LF characters)
 #
 #	hook[create|edit|rename|delete|mkdir|rmdir] = /home/me/bin/greyhole_file_changed.sh
