Updated greyhole.conf man page (also added missing config options from previous commits)

--- a/greyhole.example.conf
+++ b/greyhole.example.conf
@@ -286,18 +286,19 @@
 # Call custom scripts on events.
 #
 # Available events type: create, edit, rename, delete, mkdir, rmdir, warning, error, critical, fsck, idle, not_idle
-# - For create, edit, rename, delete, mkdir, and rmdir, the hooks are called after Greyhole finished processing the operation;
-# - for warning, error, critical and fsck, the hooks are called after Greyhole created a log;
-# - for idle and not_idle, the hooks are called just before the daemon will sleep.
+# - For create, edit, rename, delete, mkdir, and rmdir: the hooks are called after Greyhole finished processing the operation;
+# - for warning, error, critical and fsck: the hooks are called after Greyhole created a log;
+# - for idle and not_idle: the hooks are called just before the daemon will sleep, or when it's about to start working again.
 #
 # The parameters sent to the custom scripts are:
 #   - event_type (one of the above)
-# If event is related to a file/folder on a share, other params will be:
+# If event is related to a file/folder on a share (create, edit, rename, delete, mkdir and rmdir), other params will be:
 #   - share_name
 #   - path_on_share
-#   - original_path_on_share (only if event_type = rename)
-# If event is related to a log (warning, error, critical and fsck), other params will be:
-#   - event_code: one of the predefined values that define the actual error/event; look here for the list of possible codes: https://github.com/gboudreau/Greyhole/blob/master/includes/Log.php#L62
+#   - original_path_on_share (only for rename)
+# If event is related to a log (warning, error, critical, fsck, idle and not_idle), other params will be:
+#   - event_code: one of the predefined values that define the actual error/event.
+#     Look here for the list of possible codes: https://github.com/gboudreau/Greyhole/blob/master/includes/Log.php#L62
 #   - log: user-readable log (might contain LF characters)
 #
 #	hook[create|edit|rename|delete|mkdir|rmdir] = /home/me/bin/greyhole_file_changed.sh
