Added note about MTA required to send emails

--- a/greyhole.example.conf
+++ b/greyhole.example.conf
@@ -21,6 +21,7 @@
 # available space.
 # When specifying no @hostname, the email will be delivered to the local 
 # mailbox of that user.
+# Make sure you have a MTA installed (sendmail, postfix, ...), or no emails will be sent!
 
 	email_to = root
 	#email_to = root@test.com
