Removed reference to SQLite (not supported anymore)

--- a/greyhole.example.conf
+++ b/greyhole.example.conf
@@ -1,8 +1,7 @@
 # This file is part of Greyhole.
 
 #### Database Connection ####
-# Available engines: mysql, sqlite
-# When choosing sqlite, 'db_host', 'db_user', 'db_pass' & 'db_name' options are not required, but 'db_path' is.
+# Available engines: mysql
 
 	db_engine = mysql
 	db_host = localhost
@@ -212,10 +211,10 @@
 #	frozen_directory = Data/mysql
 
 #### Maximum Queued Tasks ####
-# Maximum number of queued tasks to store in MySQL/SQLite, when parsing the 
+# Maximum number of queued tasks to store in MySQL, when parsing the
 # spool directory. Use a lower number if you experience slowness while parsing 
 # spooled operations.
-# Default is 10000000 when using MySQL, and 1000 when using SQLite.
+# Default is 10000000.
 # Setting a value here will overwrite those defaults.
 
 #	max_queued_tasks = 10000000
