New check for missing shared libraries used by the Greyhole VFS module for Samba, and new script to use to fix those issues.

--- a/DEBIAN/Makefile
+++ b/DEBIAN/Makefile
@@ -1,7 +1,7 @@
 ARCH=i386
 
 deb: build
-	rm build_vfs.sh
+	rm build_vfs_all.sh
 	rm initd_script.sh
 	rm greyhole
 	rm greyhole-dfree
@@ -42,6 +42,7 @@ build:
 	install -m 0755 -D -p greyhole-php $(DESTDIR)usr/bin
 	install -m 0755 -D -p greyhole-dfree.php $(DESTDIR)usr/share/greyhole/
 	install -m 0755 -D -p greyhole-custom-cp.sh $(DESTDIR)usr/share/greyhole/
+	install -m 0755 -D -p build_vfs.sh $(DESTDIR)usr/share/greyhole/
 
 	install -m 0644 -D -p schema-mysql.sql $(DESTDIR)usr/share/greyhole/
 	install -m 0644 -D -p greyhole.example.conf $(DESTDIR)usr/share/greyhole/
