--- a/DEBIAN/Makefile
+++ b/DEBIAN/Makefile
@@ -85,6 +85,7 @@ ifeq ($(ARCH), amd64)
 	install -m 0644 -D -p samba-module/bin/4.8/greyhole-x86_64.so $(DESTDIR)usr/lib64/greyhole/greyhole-samba48.so
 	install -m 0644 -D -p samba-module/bin/4.9/greyhole-x86_64.so $(DESTDIR)usr/lib64/greyhole/greyhole-samba49.so
 	install -m 0644 -D -p samba-module/bin/4.10/greyhole-x86_64.so $(DESTDIR)usr/lib64/greyhole/greyhole-samba410.so
+	install -m 0644 -D -p samba-module/bin/4.11/greyhole-x86_64.so $(DESTDIR)usr/lib64/greyhole/greyhole-samba411.so
 else
 ifeq ($(ARCH), armhf)
 		mkdir -p $(DESTDIR)usr/lib/greyhole/
@@ -117,5 +118,6 @@ else
 		install -m 0644 -D -p samba-module/bin/4.8/greyhole-i386.so $(DESTDIR)usr/lib/greyhole/greyhole-samba48.so
 		install -m 0644 -D -p samba-module/bin/4.9/greyhole-i386.so $(DESTDIR)usr/lib/greyhole/greyhole-samba49.so
 		install -m 0644 -D -p samba-module/bin/4.10/greyhole-i386.so $(DESTDIR)usr/lib/greyhole/greyhole-samba410.so
+		install -m 0644 -D -p samba-module/bin/4.11/greyhole-i386.so $(DESTDIR)usr/lib/greyhole/greyhole-samba411.so
 endif
 endif
