New config options: calculate_md5 and parallel_copying (default to yes) Ref: #225

--- a/greyhole.example.conf
+++ b/greyhole.example.conf
@@ -59,6 +59,15 @@
 
 	check_for_open_files = yes
 
+#### Copying ####
+# Options for the command that will create file copies
+
+# Calculate MD5 of new/changed files, while making file copies.
+#    calculate_md5 = yes
+
+# Create all file copies simultaneously, instead of sequentially.
+#    parallel_copying = yes
+
 #### Shares Settings ####
 # Number of copies of each file you want Greyhole to keep, per Share.
 # This is not the number of duplicates! 2 copies = 1 duplicate
