Removing old files; shellcheck; fixed white-space in shell scripts (was a mix of tabs and spaces)

--- a/upstart.conf
+++ b/upstart.conf
@@ -10,7 +10,7 @@ pre-start script
 end script
 
 script
-	n=`grep daemon_niceness /etc/greyhole.conf | grep -v '#.*daemon_niceness' | sed 's/^.*= *\(.*\) *$/\1/'`
+	n=$(grep daemon_niceness /etc/greyhole.conf | grep -v '#.*daemon_niceness' | sed 's/^.*= *\(.*\) *$/\1/')
 	if [ "$n" = "" ]; then
 		n=1
 	fi
@@ -18,8 +18,8 @@ script
 end script
 
 post-start script
-    PID=`status greyhole | egrep -oi '([0-9]+)$' | head -n1`
-    echo $PID > /var/run/greyhole.pid
+    PID=$(status greyhole | grep -Eoi '([0-9]+)$' | head -n1)
+    echo "$PID" > /var/run/greyhole.pid
 end script
 
 post-stop script
