Samba VFS modules for arm64 architecture

--- a/DEBIAN/Makefile
+++ b/DEBIAN/Makefile
@@ -82,6 +82,7 @@ ifeq ($(ARCH), amd64)
 	install -m 0644 -D -p samba-module/bin/4.9/greyhole-x86_64.so $(DESTDIR)usr/lib64/greyhole/greyhole-samba49.so
 	install -m 0644 -D -p samba-module/bin/4.10/greyhole-x86_64.so $(DESTDIR)usr/lib64/greyhole/greyhole-samba410.so
 	install -m 0644 -D -p samba-module/bin/4.11/greyhole-x86_64.so $(DESTDIR)usr/lib64/greyhole/greyhole-samba411.so
+	install -m 0644 -D -p samba-module/bin/4.12/greyhole-x86_64.so $(DESTDIR)usr/lib64/greyhole/greyhole-samba412.so
 else
 ifeq ($(ARCH), armhf)
 		mkdir -p $(DESTDIR)usr/lib/greyhole/
@@ -101,6 +102,15 @@ ifeq ($(ARCH), armhf)
 else
 ifeq ($(ARCH), arm64)
 		mkdir -p $(DESTDIR)usr/lib/greyhole/
+		install -m 0644 -D -p samba-module/bin/4.4/greyhole-arm64.so $(DESTDIR)usr/lib/greyhole/greyhole-samba44.so
+		install -m 0644 -D -p samba-module/bin/4.5/greyhole-arm64.so $(DESTDIR)usr/lib/greyhole/greyhole-samba45.so
+		install -m 0644 -D -p samba-module/bin/4.6/greyhole-arm64.so $(DESTDIR)usr/lib/greyhole/greyhole-samba46.so
+		install -m 0644 -D -p samba-module/bin/4.7/greyhole-arm64.so $(DESTDIR)usr/lib/greyhole/greyhole-samba47.so
+		install -m 0644 -D -p samba-module/bin/4.8/greyhole-arm64.so $(DESTDIR)usr/lib/greyhole/greyhole-samba48.so
+		install -m 0644 -D -p samba-module/bin/4.9/greyhole-arm64.so $(DESTDIR)usr/lib/greyhole/greyhole-samba49.so
+		install -m 0644 -D -p samba-module/bin/4.10/greyhole-arm64.so $(DESTDIR)usr/lib/greyhole/greyhole-samba410.so
+		install -m 0644 -D -p samba-module/bin/4.11/greyhole-arm64.so $(DESTDIR)usr/lib/greyhole/greyhole-samba411.so
+		install -m 0644 -D -p samba-module/bin/4.12/greyhole-arm64.so $(DESTDIR)usr/lib/greyhole/greyhole-samba412.so
 else
 		mkdir -p $(DESTDIR)usr/lib/greyhole/
 		install -m 0644 -D -p samba-module/bin/3.4/greyhole-i386.so $(DESTDIR)usr/lib/greyhole/greyhole-samba34.so
@@ -118,6 +128,7 @@ else
 		install -m 0644 -D -p samba-module/bin/4.9/greyhole-i386.so $(DESTDIR)usr/lib/greyhole/greyhole-samba49.so
 		install -m 0644 -D -p samba-module/bin/4.10/greyhole-i386.so $(DESTDIR)usr/lib/greyhole/greyhole-samba410.so
 		install -m 0644 -D -p samba-module/bin/4.11/greyhole-i386.so $(DESTDIR)usr/lib/greyhole/greyhole-samba411.so
+		install -m 0644 -D -p samba-module/bin/4.12/greyhole-i386.so $(DESTDIR)usr/lib/greyhole/greyhole-samba412.so
 endif
 endif
 endif
