Removing deprecated db_engine from example .conf and man page

--- a/greyhole.example.conf
+++ b/greyhole.example.conf
@@ -1,9 +1,8 @@
 # This file is part of Greyhole.
 
 #### Database Connection ####
-# Available engines: mysql
+# Only MySQL (or compatible) is supported.
 
-	db_engine = mysql
 	db_host = localhost
 	db_user = greyhole_user
 	db_pass = 89y63jdwe
