Document 'check_storage_pool_schedule' config

--- a/greyhole.example.conf
+++ b/greyhole.example.conf
@@ -105,6 +105,13 @@
 #	storage_pool_drive = /mnt/hdd2/gh, min_free: 10gb
 #	storage_pool_drive = /mnt/hdd3/gh, min_free: 10gb
 
+# If you'd like you drives to sleep when inactive, setting a schedule here will
+# prevent the Greyhole daemon from keeping your drives awake by checking them every 10s.
+# Specify the time(s) when Greyhole is allowed to check storage pool drives.
+# Supported format: *:mi (i.e. once per hour) and hh:mi (once per day)
+
+	check_storage_pool_schedule = *:00
+
 # The following can help you test Greyhole by defining multiple storage_pool_drive 
 # that are in fact just empty directories on the same drive.
 # WARNING! Do NOT enable that option when you're not testing Greyhole.
