--- a/greyhole.example.conf
+++ b/greyhole.example.conf
@@ -62,10 +62,10 @@
 # Options for the command that will create file copies
 
 # Calculate MD5 of new/changed files, while making file copies.
-#    calculate_md5 = yes
+#	calculate_md5 = yes
 
 # Create all file copies simultaneously, instead of sequentially.
-#    parallel_copying = yes
+#	parallel_copying = yes
 
 #### Shares Settings ####
 # Number of copies of each file you want Greyhole to keep, per Share.
@@ -123,9 +123,9 @@
 # The groups you define here will be available to use in the 
 # drive_selection_algorithm option(s) below.
 # The group names (OK, NEW, BROKEN, REMOTE in the example below) can be 
-# anything you'd like.
+# anything you'd like, and are case-sensitive.
 # Use one line per group, with the following syntax:
-#   group name: one or more (comma-separated) storage pool drives
+#   group name: zero or more (comma-separated) storage pool drives
 # If you ommit any storage pool drive from your groups, this drive 
 # will NOT be used by Greyhole!
 #
@@ -133,15 +133,15 @@
 #   on how we suggest you use this feature.
 
 #	drive_selection_groups = OK: /mnt/hdd0/gh, /mnt/hdd2/gh
-#	                         NEW: /mnt/hdd1/gh
-#	                         BROKEN: /mnt/hdd3/gh
-#	                         REMOTE: /mnt/remote1/gh
+#	drive_selection_groups = NEW: /mnt/hdd1/gh
+#	drive_selection_groups = BROKEN: /mnt/hdd3/gh
+#	drive_selection_groups = REMOTE: /mnt/remote1/gh
 
 # You can also define drive_selection_groups for specific shares:
 #
 #	drive_selection_groups[Photos] = SATA: /mnt/hdd0/gh
-#	                                 IDE: /mnt/hdd1/gh, /mnt/hdd2/gh
-#	                                 USB: /mnt/hdd3/gh
+#	drive_selection_groups[Photos] = IDE: /mnt/hdd1/gh, /mnt/hdd2/gh
+#	drive_selection_groups[Photos] = USB: /mnt/hdd3/gh
 
 #### Storage Drive Selection Algorithm ####
 # available algorithms: most_available_space, least_used_space
