--- a/greyhole.example.conf
+++ b/greyhole.example.conf
@@ -44,7 +44,6 @@
 #	greyhole_error_log_file = /var/log/greyhole.err
 
 # Available verbosity levels: DEBUG, INFO, WARN, ERROR
-# Note that for --status to work correctly, you'll need to keep this to DEBUG.
 
 	log_level = DEBUG
 
@@ -235,10 +234,10 @@
 #	max_queued_tasks = 10000000
 
 #### Memory Limit ###
-## Maximum amount of ram that Greyhole can consume while running
-## this can be higher than the global php.ini memory limit
-## if greyhole uses >95% of available memory while loading
-## data it will quit and throw an error in the logs
+# Maximum amount of memory that Greyhole can consume while running.
+# This can be higher than the global php.ini memory limit.
+# If greyhole uses >95% of available memory while loading
+# data, it will quit and throw an error in the logs.
 # Default is 512M
 # Setting a value here will overwrite this default.
 # It is NOT advisable to lower the memory limit.
