Improvement: use `greyhole --config` instead of grep-ing the greyhole.conf file manually, in init scripts

--- a/upstart.conf
+++ b/upstart.conf
@@ -10,9 +10,9 @@ pre-start script
 end script
 
 script
-	n=$(grep daemon_niceness /etc/greyhole.conf | grep -v '#.*daemon_niceness' | sed 's/^.*= *\(.*\) *$/\1/')
+	n=$(/usr/bin/greyhole --config daemon_niceness)
 	if [ "$n" = "" ]; then
-		n=1
+		n=0
 	fi
     nice -n $n /usr/bin/greyhole --daemon
 end script
