--- a/greyhole.example.conf
+++ b/greyhole.example.conf
@@ -283,10 +283,11 @@
 #### Hooks ####
 # Call custom scripts on events.
 #
-# Available events type: create, edit, rename, delete, mkdir, rmdir, warning, error, critical, fsck, idle, not_idle
+# Available events type: create, edit, rename, delete, mkdir, rmdir, warning, error, critical, fsck, idle, not_idle, email
 # - For create, edit, rename, delete, mkdir, and rmdir: the hooks are called after Greyhole finished processing the operation;
 # - for warning, error, critical and fsck: the hooks are called after Greyhole created a log;
 # - for idle and not_idle: the hooks are called just before the daemon will sleep, or when it's about to start working again.
+# - for email: the hook is called after Greyhole sent an email;
 #
 # The parameters sent to the custom scripts are:
 #   - event_type (one of the above)
@@ -298,8 +299,10 @@
 #   - event_code: one of the predefined values that define the actual error/event.
 #     Look here for the list of possible codes: https://github.com/gboudreau/Greyhole/blob/master/includes/Log.php#L62
 #   - log: user-readable log (might contain LF characters)
+# For email event, two parameters are sent: subject and body.
 #
 #	hook[create|edit|rename|delete|mkdir|rmdir] = /usr/share/greyhole/scripts-examples/greyhole_file_changed.sh
 #	hook[warning|error|critical] = /usr/share/greyhole/scripts-examples/greyhole_notify_error.sh
 #	hook[fsck] = /usr/share/greyhole/scripts-examples/greyhole_send_fsck_report.sh
+#	hook[email] = /usr/share/greyhole/scripts-examples/greyhole_sysadmin_notification.sh
 #	hook[idle|not_idle] = /usr/share/greyhole/scripts-examples/greyhole_idle.sh
