Bugfix: default for 'daemon_niceness' config was not properly applied, preventing the service from starting Fixes #258

--- a/upstart.conf
+++ b/upstart.conf
@@ -11,8 +11,8 @@ end script
 
 script
 	n=$(/usr/bin/greyhole --config daemon_niceness)
-	if [ "$n" = "" ]; then
-		n=0
+	if [ "$n" = "false" ]; then
+		n=1
 	fi
     nice -n $n /usr/bin/greyhole --daemon
 end script
