Comment out sticky-files suggestions

--- a/greyhole.example.conf
+++ b/greyhole.example.conf
@@ -183,9 +183,9 @@
 # want the files to go on specific hard drive(s).
 # If you don't specify any stick_into, the drive with the most free space will 
 # be use to hold your files together.
-
-	sticky_files = Music/
-
+#
+#	sticky_files = Music/
+#
 #	sticky_files = Videos/Movies/
 #		stick_into = /mnt/hdd1/gh
 #		stick_into = /mnt/hdd5/gh
